--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "16.0.0-beta.5",
-    "react-native": "0.49.3"
+    "react-native": "0.49.3",
+    "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^2.6.2"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
