--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "mobx": "^5.0.3",
+		"mobx-react": "^5.2.3",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
     "react-native-vector-icons": "^4.6.0",
