--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,12 +28,15 @@ allprojects {
             url 'https://maven.google.com/'
             name 'Google'
         }
+         maven {
+            url "$rootDir/../node_modules/jsc-android/dist"
+        }
     }
 }
 
 ext {
     buildToolsVersion = "26.0.3"
-    minSdkVersion = 16
+    minSdkVersion = 21
     compileSdkVersion = 26
     targetSdkVersion = 26
     supportLibVersion = "26.1.0"
