--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "jsc-android": "^224109.0.0",
+    "es6-symbol": "^3.1.1",
     "mobx": "^5.0.3",
 		"mobx-react": "^5.2.3",
     "react": "16.0.0-beta.5",
